computer-does-not-work

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles/style-global.css">
     <link rel="stylesheet" href="styles/style-header.css">
     <link rel="stylesheet" href="styles/price-list.css">
+    <link rel="stylesheet" href="styles/computer-does-not-work.css">
     <title>GekoCorp</title>
  </head>
  <body>
@@ -241,6 +242,34 @@
                         <p class="price-list-grid__description">IT-поддержка и&nbsp;другое...</p>
                     </div>
                     <a href="#" class="price-list-grid__link">подробности и цены</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="computer-does-not-work">
+        <div class="container container--computer-does-not-work">
+            <h3 class="computer-does-not-work__title">Не работает компьютер?</h3>
+            <div class="computer-does-not-work__banner">
+                <div class="computer-does-not-work__cover">
+                    <img class="computer-does-not-work__image" src="images/computer-does-not-work/What_We_Do.jpg" alt="computer-does-not-work__image">
+                </div>
+                <div class="computer-does-not-work__text">
+                    <div class="computer-does-not-work__text-flex">
+                        <p class="computer-does-not-work__description computer-does-not-work__description--1">Вызовите мастера для бесплатной диагностики в удобное для вас время</p>
+                    </div>
+                    <div class="computer-does-not-work__text-flex">
+                        <p class="computer-does-not-work__description computer-does-not-work__description--2">Узнайте причину неисправности, перечень необходимых работ и стоимость ремонта</p>
+                    </div>
+                    <div class="computer-does-not-work__text-flex">
+                        <p class="computer-does-not-work__description computer-does-not-work__description--3">Платите по окончанию выполнения ремонта и подписания договора</p>
+                    </div>
+                    <div class="computer-does-not-work__text-flex">
+                        <p class="computer-does-not-work__description computer-does-not-work__description--4">Получите гарантию 1 год на произведенные работы</p>
+                    </div>
+                </div>
+                <!--<div class="computer-does-not-work__item"></div>-->
+                <div class="computer-does-not-work__link-flex">
+                    <a href="#" class="computer-does-not-work__link">Подробнее</a>
                 </div>
             </div>
         </div>
