call-a-master correction

--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     <link rel="stylesheet" href="styles/price-list.css">
     <link rel="stylesheet" href="styles/computer-does-not-work.css">
     <link rel="stylesheet" href="styles/call-a-master.css">
-    <script src="scripts/check_device.js" defer></script>
-    <script src="scripts/check_manufacturer.js" defer></script>
-    <script src="scripts/form_master_validation.js" defer></script>
     <title>GekoCorp</title>
  </head>
  <body>
@@ -333,8 +330,11 @@
             </div>
         </div>
     </section>
-
+    <script src="scripts/check_device.js" defer></script>
+    <script src="scripts/check_manufacturer.js" defer></script>
+    <script src="scripts/form_master_validation.js" defer></script>
     <script src="scripts/phone_number_mask.js" type="module"></script>
+    <script src="scripts/text_modification.js"></script>
 
  </body>
  </html>
