reason-of-appeal

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/price-list.css">
     <link rel="stylesheet" href="styles/computer-does-not-work.css">
     <link rel="stylesheet" href="styles/call-a-master.css">
+    <link rel="stylesheet" href="styles/reason-of-appeal.css">
     <title>GekoCorp</title>
  </head>
  <body>
@@ -327,6 +328,106 @@
                     <p class="call-a-master__description">Мастера сервисного центра Geko Corp оперативно и гарантированно устранят любые проблемы, вызванные програмными или аппаратными сбоями. В случае выявления неисправностей, которые невозможно обнаружить при первоначальной диагностике, мастер обязательно согласует с вами возникшие дополнительные расходы, так что вы всегда будете уверены в конечной стоимости ремонта.</p>
                     <p class="call-a-master__description">Вы можете рассчитать предварительную стоимость ремонта по ценам в нашем прайс-листе. Если вы не нашли нужную услугу, свяжитесь с нами. </p>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section class="reason-of-appeal">
+        <div class="reason-of-appeal__background">
+            <div class="container">
+                <div class="reason-of-appeal__inner">
+                    <div class="reason-of-appeal__cover">
+                        <img src="images/reason-of-appeal/Message.svg" alt="reason-of-appeal__img" class="reason-of-appeal__img">
+                    </div>
+                    <p class="reason-of-appeal__text">Мы ориентированы на долгосрочное сотрудничество с нашими клиентами и работаем по принципу “домашнего доктора” для вашей компьютерной техники, поэтому обеспечиваем вас технической поддержкой и консультациями по всем вопросам, даже самым мелким.</p>
+                </div>
+                <div class="reason-of-appeal__link-flex">
+                    <a href="#" class="reason-of-appeal__link">получить консультацию</a>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <h2 class="reason-of-appeal__title">почему стоит обратиться к нам</h2>
+            <div class="reason-of-appeal-grid">
+                <div class="reason-of-appeal-grid__horizontal-line"></div>
+                <div class="reason-of-appeal-grid__circle"></div>
+                <div class="reason-of-appeal-grid__horizontal-line"></div>
+                <div class="reason-of-appeal-grid__circle"></div>
+                <div class="reason-of-appeal-grid__horizontal-line"></div>
+                <div class="reason-of-appeal-grid__item">
+                    <div class="reason-of-appeal-grid__cover">
+                        <img src="images/reason-of-appeal/95.svg" alt="95.svg" class="reason-of-appeal-grid__img">
+                    </div>
+                    <p class="reason-of-appeal-grid__text">ремонтных работ выполняются на месте в день обращения</p>
+                </div>
+                <div class="reason-of-appeal-grid__vertical-line"></div>
+                <div class="reason-of-appeal-grid__item">
+                    <div class="reason-of-appeal-grid__cover">
+                        <img src="images/reason-of-appeal/purse.svg" alt="purse.svg" class="reason-of-appeal-grid__img">
+                    </div>
+                    <p class="reason-of-appeal-grid__text">демократичные цены, отсутствие скрытых услуг и доплат</p>
+                </div>
+                <div class="reason-of-appeal-grid__vertical-line"></div>
+                <div class="reason-of-appeal-grid__item">
+                    <div class="reason-of-appeal-grid__cover">
+                        <img src="images/reason-of-appeal/sheet.svg" alt="sheet.svg" class="reason-of-appeal-grid__img">
+                    </div>
+                    <p class="reason-of-appeal-grid__text">гарантия на ремонтные работы и комплектующие один год</p>
+                </div>
+                <div class="reason-of-appeal-grid__horizontal-line"></div>
+                <div class="reason-of-appeal-grid__circle"></div>
+                <div class="reason-of-appeal-grid__horizontal-line"></div>
+                <div class="reason-of-appeal-grid__circle"></div>
+                <div class="reason-of-appeal-grid__horizontal-line"></div>
+                <div class="reason-of-appeal-grid__item">
+                    <div class="reason-of-appeal-grid__cover">
+                        <img src="images/reason-of-appeal/pro.svg" alt="pro.svg" class="reason-of-appeal-grid__img">
+                    </div>
+                    <p class="reason-of-appeal-grid__text">все мастера - дипломированные специалисты с опытом работы более 8 лет</p>
+                </div>
+                <div class="reason-of-appeal-grid__vertical-line reason-of-appeal-grid__vertical-line--mod"></div>
+                <div class="reason-of-appeal-grid__item">
+                    <div class="reason-of-appeal-grid__cover">
+                        <img src="images/reason-of-appeal/wheels.svg" alt="wheels.svg" class="reason-of-appeal-grid__img">
+                    </div>
+                    <p class="reason-of-appeal-grid__text">современное профессиональное оборудование для диагностики и ремонта</p>
+                </div>
+                <div class="reason-of-appeal-grid__vertical-line reason-of-appeal-grid__vertical-line--mod"></div>
+                <div class="reason-of-appeal-grid__item">
+                    <div class="reason-of-appeal-grid__cover">
+                        <img src="images/reason-of-appeal/notebook.svg" alt="notebook.svg" class="reason-of-appeal-grid__img">
+                    </div>
+                    <p class="reason-of-appeal-grid__text">при необходимости проведем ремонт вечером или в выходной день</p>
+                </div>
+                <div class="reason-of-appeal-grid__horizontal-line"></div>
+                <div class="reason-of-appeal-grid__circle"></div>
+                <div class="reason-of-appeal-grid__horizontal-line"></div>
+                <div class="reason-of-appeal-grid__circle"></div>
+                <div class="reason-of-appeal-grid__horizontal-line"></div>
+                <div class="reason-of-appeal-grid__item">
+                    <div class="reason-of-appeal-grid__cover">
+                        <img src="images/reason-of-appeal/box.svg" alt="box.svg" class="reason-of-appeal-grid__img">
+                    </div>
+                    <p class="reason-of-appeal-grid__text">все запчасти только от официальных дистрибьютеров</p>
+                </div>
+                <div class="reason-of-appeal-grid__vertical-line"></div>
+                <div class="reason-of-appeal-grid__item">
+                    <div class="reason-of-appeal-grid__cover">
+                        <img src="images/reason-of-appeal/windows.svg" alt="windows.svg" class="reason-of-appeal-grid__img">
+                    </div>
+                    <p class="reason-of-appeal-grid__text">лицензионные ключи на программное обеспечение по оптовой цене</p>
+                </div>
+                <div class="reason-of-appeal-grid__vertical-line"></div>
+                <div class="reason-of-appeal-grid__item">
+                    <div class="reason-of-appeal-grid__cover">
+                        <img src="images/reason-of-appeal/people.svg" alt="people.svg" class="reason-of-appeal-grid__img">
+                    </div>
+                    <p class="reason-of-appeal-grid__text">9 из 10 обратившихся рекомендуют нас друзьям и знакомым</p>
+                </div>
+                <div class="reason-of-appeal-grid__horizontal-line"></div>
+                <div class="reason-of-appeal-grid__circle"></div>
+                <div class="reason-of-appeal-grid__horizontal-line"></div>
+                <div class="reason-of-appeal-grid__circle"></div>
+                <div class="reason-of-appeal-grid__horizontal-line"></div>
             </div>
         </div>
     </section>
