--- a/index.html
+++ b/index.html
@@ -436,8 +436,9 @@
     </section>
     <section class="customer-reviews">
         <div class="container container--customer-reviews">
-            <h2 class="customer-reviews__title">Отзывы клиентов</h2>
+            
             <div class="swiper-container slider-customer-reviews">
+                <h2 class="swiper-container__title">Отзывы клиентов</h2>
                 <div class="swiper-wrapper">
                   <div class="swiper-slide swiper-slide--customer-reviews">
                     <div class="swiper-slide__author">
