--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="styles/customer-reviews.css">
     <link rel="stylesheet" href="styles/slider-customer-reviews.css">
     <link rel="stylesheet" href="node_modules/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="styles/slider-team.css">
     <title>GekoCorp</title>
  </head>
  <body>
@@ -499,12 +500,50 @@
               <p class="customer-reviews__link">Мы на <a href="https://www.irecommend.ru">www.irecommend.ru</a></p>
         </div>
     </section>
+    <section class="team">
+        <div class="container">
+            <div class="swiper-container slider-team">
+                <h2 class="slider-team__title">Наша команда</h2>
+                <p class="slider-team__text">В команде мастеров компьютерного сервиса Geko объединились профессионалы, которые хорошо знают и любят свое дело. Огромный опыт, современная техническая база и коллективный потенциал позволяют нам оперативно и качественно решать любые проблемы, возникшие с вашей компьютерной техникой.</p>
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <img class="swiper-slide__img" src="images/team/master.jpg" alt="images/team/master.jpg">
+                    <p class="swiper-slide__name">Сергей Александров</p>
+                    <p class="swiper-slide__experience">Опыт работы – 10 лет</p>
+                  </div>
+                  <div class="swiper-slide">
+                    <img class="swiper-slide__img" src="images/team/master.jpg" alt="images/team/master.jpg">
+                    <p class="swiper-slide__name">Сергей Александров</p>
+                    <p class="swiper-slide__experience">Опыт работы – 10 лет</p>
+                  </div>
+                  <div class="swiper-slide">
+                    <img class="swiper-slide__img" src="images/team/master.jpg" alt="images/team/master.jpg">
+                    <p class="swiper-slide__name">Сергей Александров</p>
+                    <p class="swiper-slide__experience">Опыт работы – 10 лет</p>
+                  </div>
+                  <div class="swiper-slide">
+                    <img class="swiper-slide__img" src="images/team/master.jpg" alt="images/team/master.jpg">
+                    <p class="swiper-slide__name">Сергей Александров</p>
+                    <p class="swiper-slide__experience">Опыт работы – 10 лет</p>
+                  </div>
+                  <div class="swiper-slide">
+                    <img class="swiper-slide__img" src="images/team/master.jpg" alt="images/team/master.jpg">
+                    <p class="swiper-slide__name">Сергей Александров</p>
+                    <p class="swiper-slide__experience">Опыт работы – 10 лет</p>
+                  </div>
+                </div>
+                </div>
+                <div class="swiper-pagination-team"></div>
+              </div>
+        </div>
+    </section>
     <script src="scripts/check_device.js" defer></script>
     <script src="scripts/check_manufacturer.js" defer></script>
     <script src="scripts/form_master_validation.js" defer></script>
     <script src="scripts/phone_number_mask.js" type="module"></script>
     <script src="scripts/text_modification.js"></script>
     <script src="scripts/slider-customer-reviews.js" type="module"></script>
+    <script src="scripts/slider-team.js" type="module"></script>
     <script src="node_modules/swiper/swiper-bundle.min.js"></script>
 
  </body>
