--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="styles/slider-customer-reviews.css">
     <link rel="stylesheet" href="node_modules/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="styles/slider-team.css">
+    <link rel="stylesheet" href="styles/reason-of-call.css">
     <title>GekoCorp</title>
  </head>
  <body>
@@ -535,6 +536,46 @@
                 </div>
                 <div class="swiper-pagination-team"></div>
               </div>
+        </div>
+    </section>
+    <section class="reason-of-call">
+        <div class="reason-of-call__thesis">
+            <div class="container">
+                <div class="thesis__inner">
+                    <div class="thesis__cover">
+                        <img src="images/reason-of-call/Attention.svg" alt="images/reason-of-call/Attention.svg" class="thesis__img">
+                    </div>
+                    <p class="thesis__text">Жаль, нельзя заранее предугадать будущую поломку в&nbsp;компьютере. Она становится заметной, лишь когда тот окончательно перестает работать. Важно вовремя обратиться в сервисный центр для предоставления компьютерной помощи как <span>только замечена</span> неисправность. Это избавит вас от лишних затрат и стрессовых ситуаций.</p>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <h2 class="reason-of-call__title">Когда нужно вызвать мастера</h2>
+            <div class="reason-of-call__flex">
+                <p class="reason-of-call__reason">Не включается монитор</p>
+                <p class="reason-of-call__text">Убедитесь в исправности розетки и в том, что устройство к ней подключено. Возможно, не все провода или разъемы подключены корректно. Если вы все проверили и уверены, что проблема не в электропитании, поступающем к компьютеру, а в самом устройстве, вероятно монитор перестал работать по причине засорения комплектующих внутри блока. Требуется компьютерная помощь, ремонт и чистка устройства.</p>
+            </div>
+            <div class="reason-of-call__flex">
+                <p class="reason-of-call__reason">Системный блок издаёт сильные шумы</p>
+                <p class="reason-of-call__text">Слышно посторонние шумы из системного блока — значит, что он чем-то засорен. Важно вовремя почистить блок, чтобы избежать последствий накопления грязи и порчи блока компьютеров. Следует обратиться за услугой “компьютерная помощь” к профессионалам Geko. Мастер аккуратно очистит блок и не повредит находящиеся внутри важные комплектующие.</p>
+            </div>
+            <div class="reason-of-call__flex">
+                <p class="reason-of-call__reason">Появление "синего экрана смерти"</p>
+                <p class="reason-of-call__text">Неисправность операционной системы говорит о наличии вирусов в компьютере. Выход из строя системного блока также может являться причиной поломки и необходимости услуги “компьютерная помощь”.</p>
+            </div>
+            <div class="reason-of-call__flex">
+                <p class="reason-of-call__reason">Компьютер не работает и издаёт резкие звуки</p>
+                <p class="reason-of-call__text">В таком случае признаком неполадки компьютеров является неисправность оперативной памяти или видеокарты. Старайтесь обращать внимание, когда устройство шумит и не игнорируйте эти звуки. Необходимо срочно обратиться к специалисту и провести ремонт. Если этого не сделать, в следующий раз комп может вовсе не включиться.</p>
+            </div>
+            <div class="reason-of-call__flex">
+                <p class="reason-of-call__reason">Пропало изображение с монитора</p>
+                <p class="reason-of-call__text">Дефекты, связанные с качеством изображений на сенсоре говорят о наличии повреждений во внутреннем чипе. О том, что неисправности в данном чипе все-таки есть, свидетельствуют посторонние объекты на экране, появившиеся полосы черного или белого цвета, а также полностью потемневший экран.</p>
+            </div>
+            <p class="reason-of-call__other">Здесь представлены не все неисправности, которые могут встретиться во время использования компьютера. Пользователи также сталкиваются с проблемой неработающей клавиатуры, не запускающихся программ, невозможностью подключиться к интернету, неполадками, связанными с жестким диском или USB-устройством итд. Компьютерная помощь от компании Geko гарантирует быстрое решение проблем!</p>
+            <div class="get-a-consultation">
+                <p class="get-a-consultation__text">Получить консультацию</p>
+                <img src="images/reason-of-call/Arrow-button.svg" alt="images/reason-of-call/Arrow-button.svg" class="get-a-consultation__arrow">
+            </div>
         </div>
     </section>
     <script src="scripts/check_device.js" defer></script>
