--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="node_modules/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="styles/slider-team.css">
     <link rel="stylesheet" href="styles/reason-of-call.css">
+    <link rel="stylesheet" href="styles/style-footer.css">
     <title>GekoCorp</title>
  </head>
  <body>
@@ -533,9 +534,8 @@
                     <p class="swiper-slide__experience">Опыт работы – 10 лет</p>
                   </div>
                 </div>
-                </div>
-                <div class="swiper-pagination-team"></div>
-              </div>
+            </div>
+            <div class="swiper-pagination-team"></div>
         </div>
     </section>
     <section class="reason-of-call">
@@ -578,6 +578,196 @@
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="container container--footer">
+            <div class="footer-box">
+                <div class="footer-box__item">
+                    <a href="" class="footer-box__logo logo">
+                        <img src="images/header/logo.svg" alt="images/header/logo.svg" class="logo__img">
+                    </a>
+                    <div class="footer-box__details">
+                        <p class="footer-box__detail">ИП Шумихин М.А.</p>
+                        <p class="footer-box__detail">ИНН/ОГРНИП: 141800214410/320623400028827</p>
+                    </div>
+                    <p class="footer-box__not-a-public-offer">Обращаем ваше внимание на то, что данный интернет-сайт носит исключительно информационный характер и ни при каких условиях не является публичной офертой, определяемой положениями Статьи 437 (2) Гражданского кодекса Российской Федерации.</p>
+                </div>
+                <div class="footer-box__item">
+                    <nav class="footer-box__nav">
+                        <ul class="footer-box__list">
+                            <li>
+                                <a href="#" class="footer-box__link">Главная</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-box__link">О компании</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-box__link">Прайс-лист</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-box__link">Отзывы</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-box__link">Блог</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-box__link">Контакты</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="footer-box__item">
+                    <nav class="footer-box__service-nav">
+                        <h4 class="footer-box__title">Услуги</h4>
+                        <ul class="footer-box__list">
+                            <li>
+                                <a href="#" class="footer-box__link">Ремонт компьютеров</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-box__link">Ремонт ноутбуков</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-box__link">Ремонт моноблоков</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-box__link">Ремонт техники APPLE</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-box__link">Сборка и апгрейд компьютеров</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-box__link">Установка ОС и программ</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-box__link">Удаление вирусов</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-box__link">Настройка интернета</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-box__link">Корпоративным клиентам</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="footer-box__item footer-box__item--mobi">
+                    <ul class="social social--mobi social--mobi-footer">
+                        <li class="social__item">
+                            <a href="#" class="social__link social__link--instagramm"></a>
+                        </li>
+                        <li class="social__item">
+                            <a href="#" class="social__link social__link--whatsapp"></a>
+                        </li>
+                        <li class="social__item">
+                            <a href="#" class="social__link social__link--telegramm"></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-box__item">
+                    <ul class="phone-numbers phone-numbers--footer">
+                        <li class="phone-numbers__item">
+                            <a href="tel:+74951354547" class="phone-numbers__tel">+7 (495) 135-45-47</a>
+                        </li>
+                        <li class="phone-numbers__item">
+                            <a href="tel:+79653187014" class="phone-numbers__tel">+7 (965) 318-70-14</a>
+                        </li>
+                    </ul>
+                    <ul class="footer-box__info">
+                        <li class="info__item">
+                            <p class="info__address">г. Москва, ул. Люблинская 141, офис 319Б</p>
+                        </li>
+                        <li class="info__item">
+                            <a href="mailto:info@remont-geko.ru" class="info__mail">info@remont-geko.ru</a>
+                        </li>
+                        <li class="info__item">
+                            <p class="info__work-time">10:00 - 20:00 (без выходных)</p>
+                        </li>
+                    </ul>
+                    <ul class="social social-footer">
+                        <li class="social__item">
+                            <a href="#" class="social__link social__link--instagramm"></a>
+                        </li>
+                        <li class="social__item">
+                            <a href="#" class="social__link social__link--whatsapp"></a>
+                        </li>
+                        <li class="social__item">
+                            <a href="#" class="social__link social__link--telegramm"></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-box__item-mobi-flex">
+                <nav class="footer-box__nav footer-box__nav--mobi">
+                    <ul class="footer-box__list">
+                        <li>
+                            <a href="#" class="footer-box__link">Главная</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer-box__link">О компании</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer-box__link">Прайс-лист</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer-box__link">Отзывы</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer-box__link">Блог</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer-box__link">Контакты</a>
+                        </li>
+                    </ul>
+                </nav>
+                <nav class="footer-box__service-nav footer-box__service-nav--mobi">
+                    <h4 class="footer-box__title">Услуги</h4>
+                    <ul class="footer-box__list">
+                        <li>
+                            <a href="#" class="footer-box__link">Ремонт компьютеров</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer-box__link">Ремонт ноутбуков</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer-box__link">Ремонт моноблоков</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer-box__link">Ремонт техники APPLE</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer-box__link">Сборка и апгрейд компьютеров</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer-box__link">Установка ОС и программ</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer-box__link">Удаление вирусов</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer-box__link">Настройка интернета</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer-box__link">Корпоративным клиентам</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="footer-box__item-mobi">
+                <div class="footer-box__details">
+                    <p class="footer-box__detail">ИП Шумихин М.А.</p>
+                    <p class="footer-box__detail">ИНН/ОГРНИП: 141800214410/320623400028827</p>
+                </div>
+                <p class="footer-box__not-a-public-offer">Обращаем ваше внимание на то, что данный интернет-сайт носит исключительно информационный характер и ни при каких условиях не является публичной офертой, определяемой положениями Статьи 437 (2) Гражданского кодекса Российской Федерации.</p>
+            </div>
+            <div class="footer__box-bottom">
+                <p class="footer__item-bottom"><span>2021 </span>&nbsp;remont-geko.ru</p>
+                <div class="footer__info-bottom">
+                    <a href="#" class="footer__map">Карта сайта</a>
+                    <a href="#" class="footer__policy">Политика конфиденциальности</a>
+                </div>
+            </div>
+            <p class="footer__policy-moby">Политика конфиденциальности</p>
+        </div>
+    </footer>
     <script src="scripts/check_device.js" defer></script>
     <script src="scripts/check_manufacturer.js" defer></script>
     <script src="scripts/form_master_validation.js" defer></script>
